<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.DetailsFragment">

    <RelativeLayout
        style="@style/MatchParent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_details_toolbar"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/colorAccent"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/topLinearPanel"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:layout_below="@id/frag_details_toolbar">

            <TextView
                android:id="@+id/tvRepoName"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/repo_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/owned_by"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvOwnerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/created_on"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvCreatedOn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_forks"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvForkCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_open_issues"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvOpenIssuesCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_url"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvRepoURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>